grammar.txt
program        ::= 'program' identifier 'is' 'begin' procedure_list 'endprogram' '.'

procedure_list   ::= funct_definition
                   | main_funct_definition -> funct_def with main as the identifier
                   | variable_declaration

statement_list ::= statement
                 | statement statement_list

statement      ::= variable_declaration
                  | list_declaration
                  | assignment
                  | list_assignment
                  | if_statement
                  | for_statement
                  | 'return' expression ';'

funct_definition ::= 'procedure' identifier ':' 'INT|FLOAT|STRING|BOOL'  '(' variable_declaration?
                    | ',' variable_declaration
                    | ')' 'begin' statement_list 'endprocedure'

variable_declaration ::= 'variable' identifier ':' 'INT|FLOAT|STRING|BOOL' assignment? ';'

list_declaration     ::= list identifier ':' INT|FLOAT|STRING|BOOL list_assignment? ';'

assignment      ::= (type)identifier? '=' expression|conditonal ';'
		  
list_assignment ::= (list)identifier? '=' identifier ';' | '[' expression
		          | ',' expression|conditonal
		          | ']' ';'

list_operators  ::= (list (int|float))identifier '[' (INTLITERAL|(int)identifier)>=0 ']' 
                  | ('+' | '-') term
                  | ('*' | '/') factor

i_assignment    ::= (list (type))identifier '[' (INTLITERAL|(int)identifier)>=0 ']' '='
                  | BOOLLITERAL|INTLITERAL|FLOATLITERAL|STRLITERAL
                  | (type)identifier

if_statement    ::= 'if' condition 'then' statement_list 
                  | else_statement? 
                  | 'endif'

else_statement  ::= 'else' statement_list

*for_statement  ::= 'for' '(' variable_declaration(/w assignment) ';' condition ';' expression ')' statement_list 'endfor'

expr_            ::= expression
                  | condition 

condition       ::= expression ('==') expression -> all types 
                  | expression ('!=' | '<' | '>' | '<=' | '>=') expression -> (BOOL|INT) & (INT|FLOAT)
                  | BOOLLITERAL
                  | (type)identifier

expression      ::= term
                  | expression ('+' | '-') term -> ints and floats(truncate when int)

term            ::= factor
                  | term ('*' | '/') factor -> int and floats(truncate when int)
                  | term ('&' | '|') factor -> int

factor          ::= identifier
                  | -INTLITERAL|-FLOATLITERAL
                  | BOOLLITERAL|INTLITERAL|FLOATLITERAL|STRLITERAL
                  | '(' expression ')'

identifier      ::= [a-zA-Z][a-zA-Z0-9]*

number          ::= [0-9]+
